update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Secret-of-the-Earth-Star_75218
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 75218-h/images/cover.jpg
 creator:
   author:
     agent_name: Kuttner, Henry
@@ -14,6 +17,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/35061
     wikipedia: https://en.wikipedia.org/wiki/Henry_Kuttner
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/75218#Secret-of-the-Earth-Star
 gutenberg_issued: '2025-01-26'
 gutenberg_type: Text
 identifiers:
